--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-service": "^4.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "svg-sprite-loader": "^4.1.6",
     "vue-template-compiler": "^2.6.10"
   }
 }
